optimize authentication process

--- a/vueblog/index.html
+++ b/vueblog/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel='icon' href="logo.ico">
-    <title>V部落</title>
+    <link rel="shortcut icon" href="logo.ico"/>
+    <meta name="description" content="Chuck blog administration">
+    <title>Chuck Chan博客管理</title>
 </head>
 <body>
 <div id="app"></div>
