--- a/blogserver/src/main/resources/static/index.html
+++ b/blogserver/src/main/resources/static/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>V部落</title><link href=/static/css/app.bc863c01bd283b4b819e7aecef3aac7f.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.f03d7698db1bdbe57157.js></script><script type=text/javascript src=/static/js/vendor.dd31c3932b33cfeec940.js></script><script type=text/javascript src=/static/js/app.4f1c55b2b1aa413acb3b.js></script></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset=utf-8>
+        <meta name=viewport content="width=device-width,initial-scale=1">
+        <link rel="shortcut icon" href=logo.ico>
+        <meta name=description content="Chuck blog administration">
+        <title>Chuck Chan博客管理</title>
+        <link href=/static/css/app.bc863c01bd283b4b819e7aecef3aac7f.css rel=stylesheet>
+    </head>
+    <body>
+        <div id=app></div>
+        <script type=text/javascript src=/static/js/manifest.efa5c1cb53dedfa7ebeb.js></script>
+        <script type=text/javascript src=/static/js/vendor.261f2aa692e794af6457.js></script>
+        <script type=text/javascript src=/static/js/app.17832fcfd39d72bbd0e9.js></script>
+    </body>
+</html>
